Added undo button, moveList, changed handlers to be toggled by a global var, made scope of most functions higher

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <button id='[2,2]' class='move'></button>
     </div>
     <div class='optionsGrid'>
-      <button id='start' class='options'>Start</button>
+      <button id='start' class='options clickable'>Start</button>
+      <button id='undo' class='options'>Undo</button>
     </div>
   </body>
 </html>
